--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,13 +1,145 @@
 @import "~normalize.css";
-
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@515&display=swap');
 @import "_variables";
-@import "modules/hello.scss";
 
 body {
-  background: $wtf;
-  color: #fff;
+  font-family: 'Quicksand', sans-serif;
+}
+
+.main {
+max-width: 1000px;
+margin: 0 auto;
+}
+
+.topbar {
+  min-height: 50px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: white;
+}
+
+.navigation {
+  max-width: 1000px;
+  padding: 16px;
+  display: none;
+  &__link {
+      display: block;
+      padding: 16px;
+      text-decoration: none;
+      color: lightcoral;
+      &:hover {
+          color: lightblue;
+      }
+  }
+  &--open {
+      display: block;
+  }
+}
+
+.hamburger {
+   &__button {
+   position: absolute;
+   top: 10px;
+   right: 16px;
+   border: none;
+   background-color: transparent;
+  }
+  &__icon {
+      width: 30px;
+ } 
+} 
+
+.header {
+  margin-top: 50px;
   display: flex;
-  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background: linear-gradient(180deg, #8B80A8 6.66%, #A0A1E2 54.84%, #A0A0E0 100%);
   justify-content: center;
-  min-height: 100vh;
+      &__text {
+      margin: 16px;
+      text-align: center;
+          &--button::before{
+              content: "🇵🇱";
+          }
+      }
+      &__button {
+          width: 100px;
+          height: 100px;
+          border-radius: 25px;
+          margin: 16px;
+      }
+  }
+
+.about-me {
+background-color: #E6F6F7;
+  &__text {
+  margin: 16px;
+  }
+  &__header::before{
+      content: "🐭 ";
+      margin-left: 25px;
+  }
+}
+
+.flex {
+min-height: 100vh;
+display: flex;
+list-style: none;
+flex-flow: row wrap;
+justify-content: center;
+align-content: space-around;
+align-items: center;
+padding: 0;
+  &__item {
+      border: 3px solid #347FAE;
+      background-color: #E5C4CA;
+      width: 200px;
+      height: 200px;
+      text-align: center;
+      font-size: 20px;
+      flex-basis: 400px;
+      flex-shrink: 1;
+      }
+  &__image {
+      display: block;
+      width: 500px;
+      }
+}
+.klasa-z-js {
+  border: 2px solid black;
+  border-radius: 25px;
+}
+
+.klasa-z-js2 {
+  background-color: transparent;
+}
+
+@media (min-width: 768px) {
+  .navigation {
+      padding: 16px;
+      display: flex;
+      justify-content: space-around;
+      height: 50px;
+      align-items: center;
+      width: 100%;
+
+  }
+  .header {
+      margin-top: 80px;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      background: linear-gradient(180deg, #8B80A8 6.66%, #A0A1E2 54.84%, #A0A0E0 100%);
+      justify-content: center;
+  }
+
+  .hamburger__button {
+      display: none;
+  }
+
+  .flex__image {
+      width: 400px;
+  }
 }
