--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -55,7 +55,7 @@ margin: 0 auto;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  background: linear-gradient(180deg, #8B80A8 6.66%, #A0A1E2 54.84%, #A0A0E0 100%);
+  background: linear-gradient(180deg, #8DD3D3 50%, #FFA163 100%);
   justify-content: center;
       &__text {
       margin: 16px;
